fixed burger and X not showing up.

--- a/less/index.less
+++ b/less/index.less
@@ -90,7 +90,7 @@ h2 {
 
 .main-nav {
   display: none;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 
@@ -104,21 +104,41 @@ h2 {
  
 
   .img {
-    .flex(flex-end,flex-end,row);
-    width: 100%;
+    .flex(flex-end,flex-start,row);
+    margin-top: 10px;
+    width: 46%;
+    //height:200px;
+    //border: 2px solid blue;
+    position: relative;
+     
+    img {
+      position: absolute;
+      top: 5px;
+      right: 20px;
+
+      @media @phone {
+
+      }
+     }
   }
 
-  a {
-    font-weight: bold;
-    font-size: 4.8rem;
-    line-height: 85px;
-    text-decoration: none;
-    color: #FFFFFF;
 
-    &:hover {
-      color: #504545;
+  .links{
+    margin-top: 200px;
+
+    a {
+      font-weight: bold;
+      font-size: 4.8rem;
+      line-height: 85px;
+      text-decoration: none;
+      color: #FFFFFF;
+  
+      &:hover {
+        color: #504545;
+      }
     }
   }
+  
 
 }
 
@@ -147,7 +167,7 @@ h2 {
     background: #9AA5B0;
     position: fixed;
     top: 0px;
-    z-index: 2;
+    z-index: 20;
 
     
 
