--- a/less/services.less
+++ b/less/services.less
@@ -1,3 +1,8 @@
+.change {
+    content:url("../img/nav-hamburger-close.png");
+}
+
+
 .services {
     font-size: 1.6rem;
     max-width: 1024px;
